--- a/09-challenge-weather-app/src/index.css
+++ b/09-challenge-weather-app/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  --black: #48484a;
+  --black: #1e1e1e;
+  --dark-gray: #48484a;
   --white: #fff;
   --light-gray: #efefef;
   --primary: #ec6e4c;
@@ -8,7 +9,7 @@
 
 ::selection {
   background-color: var(--primary);
-  color: var(--black);
+  color: var(--dark-gray);
 }
 
 * {
@@ -45,11 +46,12 @@ body {
 }
 
 .header {
+  container-type: inline-size;
   width: 100%;
-  background-color: var(--black);
+  background-color: var(--dark-gray);
   border-bottom: 3px solid var(--primary);
   color: var(--white);
-  padding: 25px;
+  padding: min(5vw, 25px) 5%;
   text-align: center;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
@@ -65,19 +67,31 @@ body {
 }
 
 .header h1 {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  font-size: 4em;
+  justify-content: center;
+  font-size: min(12vw, 4em);
   margin: 0;
 }
 
 .header h1 span {
   font-family: "Lobster", sans-serif;
-  text-shadow: 1px 5px #000, 1px 7px var(--primary);
+  text-shadow: 1px 5px var(--black), 1px 7px var(--primary);
+}
+
+@container (max-width: 480px) {
+  .header h1 {
+    flex-direction: column;
+    margin-bottom: 0.3em;
+  }
+
+  .header span {
+    margin-top: -0.3em;
+  }
 }
 
 .header input {
-  width: 50%;
+  width: min(100%, 480px);
   border: none;
   border-radius: 2em;
   font-size: 1.2em;
@@ -92,12 +106,15 @@ body {
   width: 100%;
   align-items: center;
   justify-content: center;
+  padding: min(5vw, 25px) 5%;
+  text-align: center;
 }
 
 .main h2 {
-  font-size: 2em;
+  font-size: min(10vw, 2em);
   margin-top: 0;
   margin-bottom: 0.5em;
+  text-align: center;
 }
 
 .main h2 span {
@@ -111,7 +128,6 @@ body {
 .forecast {
   display: flex;
   gap: 15px;
-  padding: 15px;
 }
 
 .weather {
@@ -160,7 +176,7 @@ body {
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  background-color: var(--black);
+  background-color: var(--dark-gray);
   animation: bounce 1.3s linear infinite;
 }
 
